add extent extraction

--- a/diff-kmers.ipynb
+++ b/diff-kmers.ipynb
@@ -98,7 +98,6 @@
     "    for k, abund1 in h1.items():\n",
     "        if n % 10000 == 0:\n",
     "            print('...', n)\n",
-    "            print(k, abund1, k in h2, h2.get(k))\n",
     "        if k in h2:\n",
     "            abund2 = h2[k]\n",
     "            if abund1 != abund2:\n",
@@ -395,7 +394,9 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "a4a5cde9",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -563,6 +564,91 @@
     "for k in keys:\n",
     "    print(k, c[k])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "b7eac1f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(8655532154131, 2)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(diff_abund_3.items())[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "e725e3a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "74457073119032237 -1762 2678 916\n",
+      "81038444938869519 1561 56 1617\n",
+      "159562607389840577 1714 1618 3332\n"
+     ]
+    }
+   ],
+   "source": [
+    "for h, count in diff_abund_3.items():\n",
+    "    if abs(count) > 1500:\n",
+    "        print(h, count, sig_2.minhash.hashes[h], sig_3.minhash.hashes[h])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "3daa83e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mh = sig_3.minhash.copy_and_clear()\n",
+    "for h, count in diff_abund_3.items():\n",
+    "    if abs(count) > 1500:\n",
+    "        mh.add_hash(h)\n",
+    "        \n",
+    "sig = sourmash.SourmashSignature(mh, 'extreme')\n",
+    "with open('extreme.sig', 'wb') as fp:\n",
+    "    sourmash.save_signatures([sig], fp, compression=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "90dacc2d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for h, count in diff_abund_3.items():\n",
+    "    if abs(count) > 1500:\n",
+    "        mh = sig_3.minhash.copy_and_clear()\n",
+    "        mh.add_hash(h)\n",
+    "        \n",
+    "        sig = sourmash.SourmashSignature(mh, f'{h}')\n",
+    "        with open(f'extreme-{h}.sig', 'wb') as fp:\n",
+    "            sourmash.save_signatures([sig], fp, compression=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f77936a4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
