add excluded seqs

--- a/diff-kmers.ipynb
+++ b/diff-kmers.ipynb
@@ -21,6 +21,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "159562607389840577.release1.extents.fa\r\n",
+      "159562607389840577.release2.extents.fa\r\n",
+      "159562607389840577.release3.extents.fa\r\n",
+      "74457073119032237.release1.extents.fa\r\n",
+      "74457073119032237.release2.extents.fa\r\n",
+      "74457073119032237.release3.extents.fa\r\n",
+      "81038444938869519.release1.extents.fa\r\n",
+      "81038444938869519.release2.extents.fa\r\n",
+      "81038444938869519.release3.extents.fa\r\n",
       "Snakefile\r\n",
       "VC2010_2.0_Dec2022.fasta.gz\r\n",
       "VC2010_2.0_Dec2022.fasta.gz.sig\r\n",
@@ -28,7 +37,13 @@
       "c_elegans.PRJEB28388.WS287.genomic.fa.gz.sig\r\n",
       "c_elegans.PRJNA13758.WS287.genomic.fa.gz\r\n",
       "c_elegans.PRJNA13758.WS287.genomic.fa.gz.sig\r\n",
-      "diff-kmers.ipynb\r\n"
+      "diff-kmers.ipynb\r\n",
+      "extract-max-extent-around-hashes.py*\r\n",
+      "extreme-159562607389840577.sig\r\n",
+      "extreme-74457073119032237.sig\r\n",
+      "extreme-81038444938869519.sig\r\n",
+      "extreme.sig\r\n",
+      "out.csv\r\n"
      ]
     }
    ],
@@ -113,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "id": "ffaa358d",
    "metadata": {},
    "outputs": [
@@ -122,200 +137,201 @@
      "output_type": "stream",
      "text": [
       "... 0\n",
-      "192756907392 1 True 1\n",
       "... 10000\n",
-      "1931940918799916 1 True 1\n",
       "... 20000\n",
-      "3873773213364650 1 True 1\n",
       "... 30000\n",
-      "5837051504262474 1 True 1\n",
       "... 40000\n",
-      "7815872606851564 1 True 1\n",
       "... 50000\n",
-      "9728795872874795 1 True 1\n",
       "... 60000\n",
-      "11692788122321311 1 True 1\n",
       "... 70000\n",
-      "13636761436420096 1 True 1\n",
       "... 80000\n",
-      "15609017637309739 1 True 1\n",
       "... 90000\n",
-      "17591181170697941 1 True 1\n",
       "... 100000\n",
-      "19566467239711786 1 True 1\n",
       "... 110000\n",
-      "21534925485610695 1 True 1\n",
       "... 120000\n",
-      "23482045736348901 1 True 1\n",
       "... 130000\n",
-      "25446217329956189 1 True 1\n",
       "... 140000\n",
-      "27442290591624285 1 True 1\n",
       "... 150000\n",
-      "29382071596536919 1 True 1\n",
       "... 160000\n",
-      "31330155430025470 1 True 1\n",
       "... 170000\n",
-      "33274534840303462 1 True 1\n",
       "... 180000\n",
-      "35218870332199322 1 True 1\n",
       "... 190000\n",
-      "37174718028925714 1 True 1\n",
       "... 200000\n",
-      "39110708212260599 1 True 1\n",
       "... 210000\n",
-      "41077520710997889 1 True 1\n",
       "... 220000\n",
-      "43024453002076143 1 True 1\n",
       "... 230000\n",
-      "44967534204047842 1 True 1\n",
       "... 240000\n",
-      "46941298384521699 1 True 1\n",
       "... 250000\n",
-      "48878587997971552 1 True 1\n",
       "... 260000\n",
-      "50821700809176058 1 True 1\n",
       "... 270000\n",
-      "52826207437070607 1 True 1\n",
       "... 280000\n",
-      "54749135755342699 1 True 1\n",
       "... 290000\n",
-      "56702601230453551 1 True 1\n",
       "... 300000\n",
-      "58688001015477112 1 True 1\n",
       "... 310000\n",
-      "60651634412611762 1 True 1\n",
       "... 320000\n",
-      "62612241458404376 1 True 1\n",
       "... 330000\n",
-      "64549335057996390 1 True 1\n",
       "... 340000\n",
-      "66493670789718613 1 True 1\n",
       "... 350000\n",
-      "68453676003246526 1 True 1\n",
       "... 360000\n",
-      "70391608903523349 1 True 1\n",
       "... 370000\n",
-      "72338530525586786 1 True 1\n",
       "... 380000\n",
-      "74279831145631765 1 True 1\n",
       "... 390000\n",
-      "76218816473555074 1 True 1\n",
       "... 400000\n",
-      "78161725256106321 1 True 1\n",
       "... 410000\n",
-      "80141304050042468 1 True 1\n",
       "... 420000\n",
-      "82109253631524488 1 True 1\n",
       "... 430000\n",
-      "84060017801630790 1 True 1\n",
       "... 440000\n",
-      "86071594178154098 1 True 1\n",
       "... 450000\n",
-      "88018716163069038 1 True 1\n",
       "... 460000\n",
-      "89977142096892144 1 True 1\n",
       "... 470000\n",
-      "91961885409618818 1 True 1\n",
       "... 480000\n",
-      "93955392441629483 1 True 1\n",
       "... 490000\n",
-      "95904064733909347 1 True 1\n",
       "... 500000\n",
-      "97858251507632164 1 True 1\n",
       "... 510000\n",
-      "99804958784397327 1 True 1\n",
       "... 520000\n",
-      "101774459433738414 1 True 1\n",
       "... 530000\n",
-      "103766543470277209 1 True 1\n",
       "... 540000\n",
-      "105739985550123325 1 True 1\n",
       "... 550000\n",
-      "107704501984512006 1 True 1\n",
       "... 560000\n",
-      "109662551507577018 1 True 1\n",
       "... 570000\n",
-      "111617994184141525 1 True 1\n",
       "... 580000\n",
-      "113556429733325751 1 True 1\n",
       "... 590000\n",
-      "115505271119065935 1 True 1\n",
       "... 600000\n",
-      "117421472842720280 1 True 1\n",
       "... 610000\n",
-      "119378389526538582 1 True 1\n",
       "... 620000\n",
-      "121327355512216576 1 True 1\n",
       "... 630000\n",
-      "123274858548486406 1 True 1\n",
       "... 640000\n",
-      "125245558343251146 1 True 1\n",
       "... 650000\n",
-      "127227300242325380 1 True 1\n",
       "... 660000\n",
-      "129175952281517732 1 True 1\n",
       "... 670000\n",
-      "131125790664780808 1 True 1\n",
       "... 680000\n",
-      "133096994755272782 1 True 1\n",
       "... 690000\n",
-      "135069480503967527 1 True 1\n",
       "... 700000\n",
-      "137028057156758573 1 True 1\n",
       "... 710000\n",
-      "138962104497544661 1 True 1\n",
       "... 720000\n",
-      "140938414471780823 1 True 1\n",
       "... 730000\n",
-      "142895870990113367 1 True 1\n",
       "... 740000\n",
-      "144876893089497124 1 True 1\n",
       "... 750000\n",
-      "146831037371217724 1 True 1\n",
       "... 760000\n",
-      "148805580253949789 1 True 1\n",
       "... 770000\n",
-      "150765200881942003 1 True 1\n",
       "... 780000\n",
-      "152711018439438911 1 True 1\n",
       "... 790000\n",
-      "154662663993013647 1 True 1\n",
       "... 800000\n",
-      "156630716825814248 1 True 1\n",
       "... 810000\n",
-      "158620039306105607 1 True 1\n",
       "... 820000\n",
-      "160579048699972311 1 True 1\n",
       "... 830000\n",
-      "162541013058039090 2 True 2\n",
       "... 840000\n",
-      "164519846042242649 1 True 1\n",
       "... 850000\n",
-      "166495061293097779 1 True 1\n",
       "... 860000\n",
-      "168470027859358113 1 True 1\n",
       "... 870000\n",
-      "170454843104713337 1 True 1\n",
       "... 880000\n",
-      "172442112528293295 1 True 1\n",
       "... 890000\n",
-      "174380362911725579 1 True 1\n",
       "... 900000\n",
-      "176358748531445151 1 True 1\n",
       "... 910000\n",
-      "178314578346735989 1 True 1\n",
       "... 920000\n",
-      "180267703981216239 1 True 1\n",
       "... 930000\n",
-      "182248403677269152 1 True 1\n",
       "... 940000\n",
-      "184224983315176229 1 True 1\n"
+      "... 0\n",
+      "... 10000\n",
+      "... 20000\n",
+      "... 30000\n",
+      "... 40000\n",
+      "... 50000\n",
+      "... 60000\n",
+      "... 70000\n",
+      "... 80000\n",
+      "... 90000\n",
+      "... 100000\n",
+      "... 110000\n",
+      "... 120000\n",
+      "... 130000\n",
+      "... 140000\n",
+      "... 150000\n",
+      "... 160000\n",
+      "... 170000\n",
+      "... 180000\n",
+      "... 190000\n",
+      "... 200000\n",
+      "... 210000\n",
+      "... 220000\n",
+      "... 230000\n",
+      "... 240000\n",
+      "... 250000\n",
+      "... 260000\n",
+      "... 270000\n",
+      "... 280000\n",
+      "... 290000\n",
+      "... 300000\n",
+      "... 310000\n",
+      "... 320000\n",
+      "... 330000\n",
+      "... 340000\n",
+      "... 350000\n",
+      "... 360000\n",
+      "... 370000\n",
+      "... 380000\n",
+      "... 390000\n",
+      "... 400000\n",
+      "... 410000\n",
+      "... 420000\n",
+      "... 430000\n",
+      "... 440000\n",
+      "... 450000\n",
+      "... 460000\n",
+      "... 470000\n",
+      "... 480000\n",
+      "... 490000\n",
+      "... 500000\n",
+      "... 510000\n",
+      "... 520000\n",
+      "... 530000\n",
+      "... 540000\n",
+      "... 550000\n",
+      "... 560000\n",
+      "... 570000\n",
+      "... 580000\n",
+      "... 590000\n",
+      "... 600000\n",
+      "... 610000\n",
+      "... 620000\n",
+      "... 630000\n",
+      "... 640000\n",
+      "... 650000\n",
+      "... 660000\n",
+      "... 670000\n",
+      "... 680000\n",
+      "... 690000\n",
+      "... 700000\n",
+      "... 710000\n",
+      "... 720000\n",
+      "... 730000\n",
+      "... 740000\n",
+      "... 750000\n",
+      "... 760000\n",
+      "... 770000\n",
+      "... 780000\n",
+      "... 790000\n",
+      "... 800000\n",
+      "... 810000\n",
+      "... 820000\n",
+      "... 830000\n",
+      "... 840000\n",
+      "... 850000\n",
+      "... 860000\n",
+      "... 870000\n",
+      "... 880000\n",
+      "... 890000\n",
+      "... 900000\n",
+      "... 910000\n",
+      "... 920000\n",
+      "... 930000\n",
+      "... 940000\n"
      ]
     }
    ],
    "source": [
-    "in_3_only, diff_abund_3 = find_diff_abund(sig_3.minhash, sig_2.minhash)"
+    "in_3_only, diff_abund_3 = find_diff_abund(sig_3.minhash, sig_2.minhash)\n",
+    "in_2_only, diff_abund_2 = find_diff_abund(sig_2.minhash, sig_3.minhash)"
    ]
   },
   {
@@ -348,6 +364,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "id": "714bd59e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 1849 hashes only present in #2 vs #3\n",
+      "(Multiply by 100 to get a close estimate of # of k-mers.)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"There are {len(in_2_only)} hashes only present in #2 vs #3\")\n",
+    "print(f\"(Multiply by {scaled} to get a close estimate of # of k-mers.)\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "id": "5795b2a8",
    "metadata": {},
@@ -364,6 +400,46 @@
    "source": [
     "print(f\"There are {len(diff_abund_3)} hashes present in #3 vs #2 that have different counts\")\n",
     "print(f\"(Multiply by {scaled} to get a close estimate of # of k-mers.)\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "70eef9ce",
+   "metadata": {},
+   "source": [
+    "## K-mers absent in one or the other"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "c961e618",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mh = sig_3.minhash.copy_and_clear()\n",
+    "for h, count in in_3_only.items():\n",
+    "    mh.add_hash(h)\n",
+    "        \n",
+    "sig = sourmash.SourmashSignature(mh, 'in_3_only')\n",
+    "with open('in_3_only.sig', 'wb') as fp:\n",
+    "    sourmash.save_signatures([sig], fp, compression=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "26d908d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mh = sig_3.minhash.copy_and_clear()\n",
+    "for h, count in in_2_only.items():\n",
+    "    mh.add_hash(h)\n",
+    "        \n",
+    "sig = sourmash.SourmashSignature(mh, 'in_2_only')\n",
+    "with open('in_2_only.sig', 'wb') as fp:\n",
+    "    sourmash.save_signatures([sig], fp, compression=1)"
    ]
   },
   {
@@ -588,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "id": "e725e3a2",
    "metadata": {},
    "outputs": [
@@ -610,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "id": "3daa83e2",
    "metadata": {},
    "outputs": [],
@@ -627,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "id": "90dacc2d",
    "metadata": {},
    "outputs": [],
