--- a/diff-kmers.ipynb
+++ b/diff-kmers.ipynb
@@ -14,46 +14,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "4e9bc82b",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "159562607389840577.release1.extents.fa\r\n",
-      "159562607389840577.release2.extents.fa\r\n",
-      "159562607389840577.release3.extents.fa\r\n",
-      "74457073119032237.release1.extents.fa\r\n",
-      "74457073119032237.release2.extents.fa\r\n",
-      "74457073119032237.release3.extents.fa\r\n",
-      "81038444938869519.release1.extents.fa\r\n",
-      "81038444938869519.release2.extents.fa\r\n",
-      "81038444938869519.release3.extents.fa\r\n",
-      "Snakefile\r\n",
-      "VC2010_2.0_Dec2022.fasta.gz\r\n",
-      "VC2010_2.0_Dec2022.fasta.gz.sig\r\n",
-      "c_elegans.PRJEB28388.WS287.genomic.fa.gz\r\n",
-      "c_elegans.PRJEB28388.WS287.genomic.fa.gz.sig\r\n",
-      "c_elegans.PRJNA13758.WS287.genomic.fa.gz\r\n",
-      "c_elegans.PRJNA13758.WS287.genomic.fa.gz.sig\r\n",
-      "diff-kmers.ipynb\r\n",
-      "extract-max-extent-around-hashes.py*\r\n",
-      "extreme-159562607389840577.sig\r\n",
-      "extreme-74457073119032237.sig\r\n",
-      "extreme-81038444938869519.sig\r\n",
-      "extreme.sig\r\n",
-      "out.csv\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "ls"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
    "id": "3d25b4c7",
    "metadata": {},
    "outputs": [],
@@ -75,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "6fe6b9b5",
    "metadata": {},
    "outputs": [
@@ -85,7 +45,7 @@
        "939374"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,8 +56,89 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "86b5cf9f",
+   "metadata": {},
+   "source": [
+    "## Comparisons of release2 and release3\n",
+    "\n",
+    "Comparison of content, w/o consideration of abundance (i.e. flat k-mers)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
+   "id": "2dd95cbb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9962250506065898"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sig_2.minhash.jaccard(sig_3.minhash)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "6aa0683c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 1711 hashes only in #3 and not in #2, out of 941210 hashes total.\n",
+      "This means that about 0.18% of release 3 is unique!\n"
+     ]
+    }
+   ],
+   "source": [
+    "diff_3_2 = set(sig_3.minhash.hashes) - set(sig_2.minhash.hashes)\n",
+    "print(f\"There are {len(diff_3_2)} hashes only in #3 and not in #2, out of {len(sig_3.minhash)} hashes total.\")\n",
+    "print(f\"This means that about {len(diff_3_2) / len(sig_3.minhash)*100:.2f}% of release 3 is unique!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "5c00fc5d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 1849 hashes only in #2 and not in #3, out of 941348 hashes total.\n",
+      "This means that about 0.20% of release 2 is unique.\n"
+     ]
+    }
+   ],
+   "source": [
+    "diff_2_3 = set(sig_2.minhash.hashes) - set(sig_3.minhash.hashes)\n",
+    "print(f\"There are {len(diff_2_3)} hashes only in #2 and not in #3, out of {len(sig_2.minhash)} hashes total.\")\n",
+    "print(f\"This means that about {len(diff_2_3) / len(sig_2.minhash)*100:.2f}% of release 2 is unique.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0182f047",
+   "metadata": {},
+   "source": [
+    "## Differentially present / differentially abundant k-mers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "e8b5bae3",
    "metadata": {},
    "outputs": [],
@@ -111,7 +152,7 @@
     "\n",
     "    n = 0\n",
     "    for k, abund1 in h1.items():\n",
-    "        if n % 10000 == 0:\n",
+    "        if n % 100000 == 0:\n",
     "            print('...', n)\n",
     "        if k in h2:\n",
     "            abund2 = h2[k]\n",
@@ -122,13 +163,12 @@
     "            \n",
     "        n += 1\n",
     "\n",
-    "    return in_1_only, diff_abund_1\n",
-    "\n"
+    "    return in_1_only, diff_abund_1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "ffaa358d",
    "metadata": {},
    "outputs": [
@@ -137,195 +177,25 @@
      "output_type": "stream",
      "text": [
       "... 0\n",
-      "... 10000\n",
-      "... 20000\n",
-      "... 30000\n",
-      "... 40000\n",
-      "... 50000\n",
-      "... 60000\n",
-      "... 70000\n",
-      "... 80000\n",
-      "... 90000\n",
       "... 100000\n",
-      "... 110000\n",
-      "... 120000\n",
-      "... 130000\n",
-      "... 140000\n",
-      "... 150000\n",
-      "... 160000\n",
-      "... 170000\n",
-      "... 180000\n",
-      "... 190000\n",
       "... 200000\n",
-      "... 210000\n",
-      "... 220000\n",
-      "... 230000\n",
-      "... 240000\n",
-      "... 250000\n",
-      "... 260000\n",
-      "... 270000\n",
-      "... 280000\n",
-      "... 290000\n",
       "... 300000\n",
-      "... 310000\n",
-      "... 320000\n",
-      "... 330000\n",
-      "... 340000\n",
-      "... 350000\n",
-      "... 360000\n",
-      "... 370000\n",
-      "... 380000\n",
-      "... 390000\n",
       "... 400000\n",
-      "... 410000\n",
-      "... 420000\n",
-      "... 430000\n",
-      "... 440000\n",
-      "... 450000\n",
-      "... 460000\n",
-      "... 470000\n",
-      "... 480000\n",
-      "... 490000\n",
       "... 500000\n",
-      "... 510000\n",
-      "... 520000\n",
-      "... 530000\n",
-      "... 540000\n",
-      "... 550000\n",
-      "... 560000\n",
-      "... 570000\n",
-      "... 580000\n",
-      "... 590000\n",
       "... 600000\n",
-      "... 610000\n",
-      "... 620000\n",
-      "... 630000\n",
-      "... 640000\n",
-      "... 650000\n",
-      "... 660000\n",
-      "... 670000\n",
-      "... 680000\n",
-      "... 690000\n",
       "... 700000\n",
-      "... 710000\n",
-      "... 720000\n",
-      "... 730000\n",
-      "... 740000\n",
-      "... 750000\n",
-      "... 760000\n",
-      "... 770000\n",
-      "... 780000\n",
-      "... 790000\n",
       "... 800000\n",
-      "... 810000\n",
-      "... 820000\n",
-      "... 830000\n",
-      "... 840000\n",
-      "... 850000\n",
-      "... 860000\n",
-      "... 870000\n",
-      "... 880000\n",
-      "... 890000\n",
       "... 900000\n",
-      "... 910000\n",
-      "... 920000\n",
-      "... 930000\n",
-      "... 940000\n",
       "... 0\n",
-      "... 10000\n",
-      "... 20000\n",
-      "... 30000\n",
-      "... 40000\n",
-      "... 50000\n",
-      "... 60000\n",
-      "... 70000\n",
-      "... 80000\n",
-      "... 90000\n",
       "... 100000\n",
-      "... 110000\n",
-      "... 120000\n",
-      "... 130000\n",
-      "... 140000\n",
-      "... 150000\n",
-      "... 160000\n",
-      "... 170000\n",
-      "... 180000\n",
-      "... 190000\n",
       "... 200000\n",
-      "... 210000\n",
-      "... 220000\n",
-      "... 230000\n",
-      "... 240000\n",
-      "... 250000\n",
-      "... 260000\n",
-      "... 270000\n",
-      "... 280000\n",
-      "... 290000\n",
       "... 300000\n",
-      "... 310000\n",
-      "... 320000\n",
-      "... 330000\n",
-      "... 340000\n",
-      "... 350000\n",
-      "... 360000\n",
-      "... 370000\n",
-      "... 380000\n",
-      "... 390000\n",
       "... 400000\n",
-      "... 410000\n",
-      "... 420000\n",
-      "... 430000\n",
-      "... 440000\n",
-      "... 450000\n",
-      "... 460000\n",
-      "... 470000\n",
-      "... 480000\n",
-      "... 490000\n",
       "... 500000\n",
-      "... 510000\n",
-      "... 520000\n",
-      "... 530000\n",
-      "... 540000\n",
-      "... 550000\n",
-      "... 560000\n",
-      "... 570000\n",
-      "... 580000\n",
-      "... 590000\n",
       "... 600000\n",
-      "... 610000\n",
-      "... 620000\n",
-      "... 630000\n",
-      "... 640000\n",
-      "... 650000\n",
-      "... 660000\n",
-      "... 670000\n",
-      "... 680000\n",
-      "... 690000\n",
       "... 700000\n",
-      "... 710000\n",
-      "... 720000\n",
-      "... 730000\n",
-      "... 740000\n",
-      "... 750000\n",
-      "... 760000\n",
-      "... 770000\n",
-      "... 780000\n",
-      "... 790000\n",
       "... 800000\n",
-      "... 810000\n",
-      "... 820000\n",
-      "... 830000\n",
-      "... 840000\n",
-      "... 850000\n",
-      "... 860000\n",
-      "... 870000\n",
-      "... 880000\n",
-      "... 890000\n",
-      "... 900000\n",
-      "... 910000\n",
-      "... 920000\n",
-      "... 930000\n",
-      "... 940000\n"
+      "... 900000\n"
      ]
     }
    ],
@@ -344,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "ab7dbe3c",
    "metadata": {},
    "outputs": [
@@ -364,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "714bd59e",
    "metadata": {},
    "outputs": [
@@ -412,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "c961e618",
    "metadata": {},
    "outputs": [],
@@ -428,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "26d908d5",
    "metadata": {},
    "outputs": [],
@@ -451,12 +321,12 @@
     "\n",
     "Here is the distribution of the differences in count number.\n",
     "\n",
-    "For example, the output \"2 298\" means that there are 2 k-mers with a count difference of 298 more in #3 than in #2."
+    "For example, the output \"2 298\" means that there are 298 k-mers with a count difference of 2 more in #3 than in #2. \"-1 49\" means that there are 49 k-mers with a count difference of 1 less in # than in #2."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "8ca9018b",
    "metadata": {},
    "outputs": [],
@@ -468,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "a4a5cde9",
    "metadata": {
     "scrolled": false
@@ -643,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "b7eac1f5",
    "metadata": {},
    "outputs": [
@@ -653,7 +523,7 @@
        "(8655532154131, 2)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -664,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "e725e3a2",
    "metadata": {},
    "outputs": [
@@ -686,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "3daa83e2",
    "metadata": {},
    "outputs": [],
@@ -703,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "90dacc2d",
    "metadata": {},
    "outputs": [],
